gcc/testsuite/g++.dg/modules/mod-decl-4.C

module me;
export int foo (); // { dg-error "after an interface" }
